fixed font wrap issue

--- a/src/components/modals/LocationModal/LocationModal.css
+++ b/src/components/modals/LocationModal/LocationModal.css
@@ -24,8 +24,16 @@
   font-size: 18px;
 }
 
+.location-text {
+  font-size: 18px;
+}
+
 @media screen and (max-width: 990px) {
   .location-section p {
     font-size: 15px;
+  }
+
+  .location-text {
+    font-size: 13px;
   }
 }
